--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
