--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
